added a title and a canvas. styled the canvas using CSS to have rounded edgeds, a border, and a shadow (step 1 complete).

--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,13 @@
   vertical-align: top;
   border: 1px solid salmon;
 }
+
+.sketchpad {
+  height: 256px;
+  width: 256px;
+  border: thin solid black;
+  border-radius: 16px;
+  box-shadow: 16px 16px 8px rgba(0, 0, 0, 0.3);
+  overflow: visible;
+  background: white;
+}
